kubernetes/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
