kubernetes/apps/homepage/httproute-homepage.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
  - name: cloudflare-tunnel
    namespace: cloudflare-tunnel-system
    sectionName: https
  hostnames:
  - hp.alialjaffer.com
  rules:
  - backendRefs:
    - name: oauth2-proxy
      port: 4180
